--- a/scss/common/_list-control.scss
+++ b/scss/common/_list-control.scss
@@ -11,6 +11,12 @@ ol {
   }
 }
 
+.category-drop.combo-box.select-kit .badge-wrapper.box span {
+  &.badge-category {
+    margin-left: ($chip-width + $chip-inner-spacer-x);
+  }
+}
+
 .category-navigation {
   align-items: flex-start;
   display: flex;
