--- a/scss/common/_topic-list.scss
+++ b/scss/common/_topic-list.scss
@@ -269,9 +269,19 @@
     }
   }
 
-  .posters > a {
-    float: none;
-    margin-right: $spacer-xs;
+  .posters {
+    a:first-child {
+      .avatar.latest:not(.single) {
+        border: 0;
+        box-shadow: none;
+        position: static;
+      }
+    }
+
+    > a {
+      float: none;
+      margin-right: $spacer-xs;
+    }
   }
 
   .sortable {
