Fix reply modal styles

--- a/scss/common/_badge.scss
+++ b/scss/common/_badge.scss
@@ -77,7 +77,7 @@
 
     span {
       &.badge-category {
-        color: unquote('$primary') !important;
+        color: inherit !important;
         margin: 0;
         padding: 0;
       }
