--- a/scss/common/_list-control.scss
+++ b/scss/common/_list-control.scss
@@ -70,7 +70,9 @@ ol {
 
 .select-kit {
   &,
-  &.category-drop.combo-box {
+  &.category-drop.combo-box,
+  &.dropdown-select-box,
+  &.dropdown-select-box.toolbar-popup-menu-options {
     .select-kit-body {
       @extend %dropdown-menu;
       @extend %dropdown-menu-sm;
@@ -86,9 +88,9 @@ ol {
   }
 
   &.category-drop.combo-box,
-  &.combo-box {
+  &.combo-box,
+  &.dropdown-select-box {
     .select-kit-row {
-      @extend %dropdown-link;
       @extend %dropdown-link-sm;
 
       &:not(.no-content) {
@@ -101,6 +103,10 @@ ol {
   &.combo-box .select-kit-header {
     @extend %btn-flat;
     @extend %btn-raised;
+
+    align-items: center;
+    display: flex;
+    height: $btn-height;
 
     .fa {
       background-color: transparent !important;
@@ -123,20 +129,160 @@ ol {
     box-shadow: $btn-box-shadow-active;
   }
 
+  &.combo-box {
+    &.is-expanded {
+      .select-kit-body {
+        border-radius: 0 0 $dropdown-border-radius $dropdown-border-radius;
+      }
+
+      .select-kit-wrapper {
+        border: 0;
+        box-shadow: none;
+      }
+    }
+
+    .select-kit-filter {
+      border-top: 0;
+      line-height: inherit;
+      padding: $dropdown-link-padding-y-sm $dropdown-link-padding-x-sm;
+
+      .filter-input {
+        margin-right: $spacer-sm;
+      }
+    }
+
+    .select-kit-row {
+      margin: 0;
+    }
+  }
+
+  &.composer-actions.dropdown-select-box .select-kit-header {
+    margin-right: $spacer-xs;
+    opacity: $nav-link-opacity;
+
+    &:focus,
+    &:hover {
+      background-color: transparent;
+      opacity: 1;
+    }
+
+    &.is-focused {
+      opacity: 1;
+    }
+
+    .d-icon {
+      border: 0;
+      padding: 0;
+    }
+  }
+
+  &.dropdown-select-box {
+    &.is-expanded {
+      .select-kit-body,
+      .select-kit-collection {
+        border-radius: $dropdown-border-radius;
+      }
+    }
+
+    &.toolbar-popup-menu-options {
+      .collection-header {
+        h3 {
+          @extend %dropdown-header;
+          @extend %dropdown-header-sm;
+        }
+      }
+
+      .select-kit-row {
+        background-color: transparent;
+        border-radius: 0;
+        margin: 0;
+        transition: none;
+
+        &,
+        &.is-highlighted {
+          .d-icon,
+          .texts .desc,
+          .texts .name {
+            color: inherit;
+          }
+        }
+
+        &:focus,
+        &:hover,
+        &.is-highlighted,
+        &.is-highlighted.is-selected,
+        &.is-selected {
+          background-color: color-chooser($dropdown-link-bg-hover-dark, $dropdown-link-bg-hover-light);
+          color: inherit;
+        }
+      }
+    }
+
+    .dropdown-select-box-header {
+      &:focus,
+      &:hover {
+        .d-icon {
+          color: inherit;
+        }
+      }
+
+      &.is-focused {
+        background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
+        outline: 0;
+      }
+    }
+
+    .select-kit-row {
+      .icons {
+        margin-top: 0;
+        margin-right: ($dropdown-inner-spacer-x / 2);
+        width: auto;
+      }
+
+      .texts {
+        line-height: 1;
+
+        .desc {
+          @extend %typography-caption;
+        }
+
+        .name {
+          @extend %typography-h6;
+        }
+      }
+    }
+  }
+
   .category-row .category-desc {
     @extend %typography-caption;
+  }
+
+  .d-icon {
+    opacity: $nav-link-opacity;
+
+    @include focus-hover {
+      opacity: 1;
+    }
   }
 
   .select-kit-collection {
     background-color: transparent;
   }
 
-  .select-kit-header .caret-icon {
-    margin-right: ($spacer-xs / -2);
-    margin-left: $spacer-xs;
+  .select-kit-header {
+    .caret-icon {
+      margin-right: ($spacer-xs / -2);
+      margin-left: $spacer-xs;
+    }
+
+    .selected-name .badge-wrapper {
+      margin-right: 0;
+      transform: scale($chip-sm-scale);
+      transform-origin: 0 50%;
+    }
   }
 
   .select-kit-row {
-    line-height: $dropdown-link-height-sm;
+    line-height: $line-height-base;
   }
 }
