Hide closed reply box

--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -16,6 +16,10 @@
     right: $spacer-lg;
   }
 
+  &.closed {
+    display: none;
+  }
+
   &.draft {
     background-color: color-chooser($dropdown-bg-light, $dropdown-bg-dark);
     border-top: 0;
