--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -78,7 +78,6 @@
 
   .extra-info-wrapper {
     margin-left: $header-inner-spacer-x;
-    overflow: visible;
 
     .badge-wrapper {
       margin-right: 0;
@@ -166,7 +165,8 @@
 
   .title-wrapper {
     align-items: center;
-    display: flex;
+    flex-wrap: nowrap;
+    width: auto;
   }
 }
 
