Convert fa arrow up to md arrow upward

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -6,6 +6,10 @@
   @include material-icons('arrow_downward');
 }
 
+.fa-arrow-up {
+  @include material-icons('arrow_upward');
+}
+
 .fa-asterisk {
   @include material-icons('new_releases');
 }
