Fix category list styles

--- a/scss/common/_list-control.scss
+++ b/scss/common/_list-control.scss
@@ -53,6 +53,10 @@ ol {
     margin: 0 0 $spacer-sm $spacer-sm;
   }
 
+  .categories-admin-dropdown.select-kit .btn {
+    margin-bottom: 0;
+  }
+
   .nav {
     margin: 0 auto $spacer-sm 0;
 
