--- a/scss/common/_user.scss
+++ b/scss/common/_user.scss
@@ -46,16 +46,23 @@
   text-transform: none;
 }
 
+.summary-user-list {
+  li {
+    height: auto;
+
+    .user-info {
+      background-color: transparent;
+      border-radius: 0;
+      box-shadow: none;
+      color: inherit;
+      margin-bottom: 0;
+      padding: 0;
+    }
+  }
+}
+
 .top-section {
   margin-bottom: $spacer-lg;
-
-  &:not(.badges-section):not(.stats-section) {
-    display: flex;
-  }
-
-  > :last-child {
-    margin-bottom: 0;
-  }
 }
 
 .top-sub-section {
@@ -70,6 +77,7 @@
   &.likes-section,
   &.links-section,
   &.replies-section,
+  &.summary-user-list,
   &.topics-section {
     @extend %card;
     @extend %card-block;
@@ -325,6 +333,7 @@
         padding-left: 0;
       }
 
+      a span,
       span {
         align-items: center;
         border-radius: ($chip-height / 2);
